add generate new index.html help

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <br>				   ├─ <a href="./bash.bin">bash.bin</a>
 <br>				   ├─ <a href="./bashcmd.txt">bashcmd.txt</a>
 <br>				   ├─ <a href="./favicon.ico">favicon.ico</a>
+<br>				   ├─ <a href="./how%20to%20create%20the%20index.txt">how to create the index.txt</a>
 <br>				   ├─ <a href="./index.html">index.html</a>
 <br>				   └─ <a href="./vicmd.txt">vicmd.txt</a>
 		<br><br>
