--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <br>				   â”œâ”€ <a href="./favicon.ico">favicon.ico</a>
 <br>				   â”œâ”€ <a href="./how_to_create_the_index.txt">how_to_create_the_index.txt</a>
 <br>				   â”œâ”€ <a href="./index.html">index.html</a>
-<br>				   â”œâ”€ <a href="./vicmd.txt">vicmd.txt</a>
-<br>				   â””â”€ <a href="./%B2%E2%CA%D4%CE%C4%BC%FE%BC%D0/">²âÊÔÎÄ¼þ¼Ð</a>		<br><br>
+<br>				   â””â”€ <a href="./vicmd.txt">vicmd.txt</a>
+		<br><br>
 		</p>
 		<p>
 		<br><br>
